Fixed misaligned items in the navbar

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -37,7 +37,7 @@
 .navbar a {
   color: $brand-color;
   text-decoration: none;
-  font-size: 16px;
+  font: 400 16px / 1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: center;
   padding: 14px 16px;
   float: left;
@@ -58,7 +58,7 @@
 .dropdown .dropbtn {
   color: $brand-color;
   text-decoration: none;
-  font-size: 16px;
+  font: 400 16px / 1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: center;
   border: none;
   outline: none;
